--- a/style.css
+++ b/style.css
@@ -345,9 +345,14 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     text-align: center;
     gap: 32px;
+}
+
+.team_container h4{
+    align-self: center;
+    text-align: center;
 }
 
 #teams{
@@ -429,8 +434,34 @@ nav{
     animation: slider_loop 20s linear forwards infinite;
 }
 
-#teams2 img, #teams3 img, #team3 img{
+#teams2 img, #teams3 img, #team3 img, #grow img{
     height: 48px;
+}
+
+#grow{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: fit-content;
+    width: fit-content;
+}
+
+#grow section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+    height: fit-content;
+    padding: 0 10vw;
+}
+
+@keyframes grow {
+    0%{transform: translateX(0);}
+    100%{transform: translateX(-500vw);}
+}
+
+#grow{
+    animation: grow 10s steps(5) backwards infinite;
 }
 
 
@@ -2229,9 +2260,31 @@ a, p{
         height: fit-content;
         gap: 72px;
     }
+
+    #grow{
+        width: fit-content;
+    }
+
+    #grow section{
+        width: 90vw;
+        padding: 0 5vw;
+    }
+
+    @keyframes grow {
+        0%{transform: translateX(0);}
+        100%{transform: translateX(-450vw);}
+    }
+    
+    #grow{
+        animation: grow 10s steps(5) backwards infinite;
+    }
     
     #teams2 img, #teams3 img{
         height: 40px;
+    }
+
+    #grow img{
+        height: 32px;
     }
 
     footer{
@@ -2909,8 +2962,9 @@ body{
     
     .hero_container{
         align-items: start;
-        width: 90vw;
-        padding: 64px 64px 48px 5vw;
+        width: 100vw;
+
+        padding: 64px 5vw 48px 5vw;
         height: fit-content;
     }
 
@@ -2965,7 +3019,7 @@ body{
         gap: 56px;
     }
     
-    #teams2 img, #teams3 img{
+    #teams2 img, #teams3 img, #grow img{
         height: 20px;
     }
     
