--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ nav{
     max-width: 660px;
     background: #FEFEFE;
     z-index: 3;
+    padding-right: 56px;
 }
 
 
@@ -332,6 +333,7 @@ nav{
 .section3{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     width: 100vw;
     height: fit-content;
@@ -339,6 +341,7 @@ nav{
     position: relative;
     background-color: #003e2a;
     color: #FFFFFF;
+    gap: 32px;
 }
 
 .team_container{
